--- a/web/public/index.html
+++ b/web/public/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.css">
+    <style>
+      .leaflet-container {
+          height: 400px;
+          width: 800px;
+      }
+      </style>
     
 
     <title>Biz Visit</title>
